---- Changes since 3.84 ----
Updated the bbPress script installer to version 1.0.3, ZenPhoto to 1.4.0.4, Joomla to 1.6.3, Zikula to 1.2.6, SugarCRM to 6.1.3, FengOffice to 1.7.4, CMS Made Simple to 1.9.4.1, Nucleus to 3.64, SugarCRM to 6.2.0beta, phpMyAdmin to 3.3.10, Piwik to 1.4, Django to 1.3, TextPattern to 4.4.0, Dolibarr to 3.0.0, Joomla to 1.5.23, WordPress to 3.1.2, Mantis to 1.2.5, Rails to 3.0.6, Z-push to 1.5.2, MediaWiki to 1.16.5, Roundcube to 0.5.2, FosWiki to 1.1.3, Magento to 1.5.1.0, TWiki to 5.0.2, and Redmine to 1.1.3.
Added a script installer for WHMCS 4.4.2. This is a commerical product, so you will need to purchase a licence for it before using the installer though.
Comments are now shown and can be edited on the DNS Records page.
Added support for spam and virus filtering offloading to the Cloudmin Services page.
Records can now be manually edited by the master admin on the DNS Records page, in BIND record format.
Added a checkbox to the Custom Fields page to control if each field appears on the List Virtual Servers page.
Unix UIDs and GIDs for domain owners and mailboxes are now tracked when deleted to prevent re-use.
The HTTP and HTTPS ports for a virtual server can now be changed using the --port and --ssh-port flags to the modify-web API command.
As part of the post-install wizard process, the primary DNS server hostname is now prompted for and validated. This ensures that DNS zones created by Virtualmin have usable NS records.
Reverse (PTR) records can now be created on the DNS Records page.
---- Changes since 3.85 ----
Updated the Moodle script installer to version 2.0.3, Zikula to 1.2.7, phpMyAdmin to 3.4.1, PHPList to 2.10.14, WordPress to 3.1.3, Drupal to 7.2 and 6.22, DokuWiki to 2011-05-25, CMS Made Simple to 1.9.4.2, Movable Type to 5.1, WHMCS to 4.5.1, phpMyFAQ to 2.6.16, and SugarCRM to 6.2.0RC3.
Added a field for pasting in the text of a domain's CA certificate.