@@ -1293,3 +1293,4 @@ Reverse (PTR) records can now be created on the DNS Records page.
 ---- Changes since 3.85 ----
 Updated the Moodle script installer to version 2.0.3, Zikula to 1.2.7, phpMyAdmin to 3.4.1, PHPList to 2.10.14, WordPress to 3.1.3, Drupal to 7.2 and 6.22, DokuWiki to 2011-05-25, CMS Made Simple to 1.9.4.2, Movable Type to 5.1, WHMCS to 4.5.1, phpMyFAQ to 2.6.16, and SugarCRM to 6.2.0RC3.
 Added a field for pasting in the text of a domain's CA certificate.
+The default DNS TTL for one or more domains can now be changed via the --ttl flag to the modify-dns API command.
